Se movio la imagen de la card a la carpeta principal

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <main>
         <div class="card-container">
             <figure>
-                <img src="/assets/Hero-Image-Marte-Cloud-Terra-Validator-v2.png" alt="">
+                <img src="./Hero-Image-Marte-Cloud-Terra-Validator-v2.png" alt="">
             </figure>
             <h1>Calcula tu peso en otro planeta</h1>
             <form action="/">
